reasonable position and scale for graph, though still very wip

--- a/app/views/displays/index.html.erb
+++ b/app/views/displays/index.html.erb
@@ -1,5 +1,7 @@
 <%= javascript_include_tag "displays" %>
 
+<div id="sleep-graph"></div>
+
 <%= render partial: "/displays/event_display", locals: {events: @events} %>
 
 <ul>
