--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,34 +10,41 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <% if current_user.present? %>
-            <div>
+        <% if current_user.present? %>
+          <div>
+            <div class="col-md-6">
               <%= link_to "Home page", root_path %> |
-              <%= link_to "RailsAdmin", "/admin" %> |
               <%= link_to "People table", people_table_path  %> |
-              <%= link_to "Plans", plans_path %> |
               <% prospective_count = Person.where(prospective: true).count %>
-              <%= link_to "Prospectives (#{prospective_count})", people_prospectives_path %>
+              <%= link_to "Emails to classify (#{prospective_count})", people_prospectives_path %>
             </div>
-            <div>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+              <%= link_to "RailsAdmin", "/admin" %> |
+              <%= link_to "Plans", plans_path %> 
+            </div>
+          </div>
+
+          <div>
+            <div class="col-md-6">
               New: 
               <%= link_to "Communications", new_communication_path %> | 
               <%= link_to "Deed", deeds_precommit_path %> | 
               <%= link_to "Event", new_event_path %> |
               <%= link_to "Survey", new_survey_path %>
             </div>
-            <div>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
               <%= form_tag({action: "navigate_to_person", controller: "people"}, method: "post") do %>
                 <%= select_tag(:navigate_to_person, options_from_collection_for_select(Person.all,"id","name"), multiple: false, class: "chosen-select") %>
                 <%= submit_tag "Go" %>
               <% end %>
             </div>
-          <% end %>
-        </div>
+          </div>
+        <% end %>
       </div>
 
-      <div>
+      <div class="row">
         <% if notice.present? %>
           <p class="notice bg-success"><%= notice %></p>
         <% elsif alert.present? %>
