redundant containers removed for other pages

--- a/app/views/deeds/precommit.html.erb
+++ b/app/views/deeds/precommit.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row">
+<div class="row">
+  <div class="col-md-12">
 
     <h3>Read and acknowledge before proceeding</h3>
 
