--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title,"Edit event #{@event.id}") %>
 
-<div class="container">
-  <div class="row">
+<div class="row">
+  <div class="col-md-12">
 
     <h2>Edit event <%= "'#{@event.content}' (ID: #{@event.id})" %></h2>
 
