--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title,"New event") %>
 
-<div class="container">
-  <div class="row">
+<div class="row">
+  <div class="col-md-12">
 
     <%= form_tag action: "create", controller: "events" do %>
 
