--- a/app/views/deeds/index.html.erb
+++ b/app/views/deeds/index.html.erb
@@ -1,24 +1,25 @@
-<div class="container">
-  <div class="row">
+<div class="row">
+  <div class="col-md-12">
 
-    <h1>Deeds index</h1>
+  <h1>Deeds index</h1>
 
-    <table class="table">
+  <table class="table">
+    <tr>
+      <th>When</th>
+      <th>Plan</th>
+      <th>More details</th>
+    </tr>
+    <% @deeds.each do |deed| %>
       <tr>
-        <th>When</th>
-        <th>Plan</th>
-        <th>More details</th>
+        <td><%= "#{deed.created_at.strftime('%m/%d/%y')}" %></td>
+        <td><%= "#{deed.plan.name}" if deed.plan.present? %></td>
+        <td><%= link_to "Details", deed_path(deed.id) %> </td>
       </tr>
-      <% @deeds.each do |deed| %>
-        <tr>
-          <td><%= "#{deed.created_at.strftime('%m/%d/%y')}" %></td>
-          <td><%= "#{deed.plan.name}" if deed.plan.present? %></td>
-          <td><%= link_to "Details", deed_path(deed.id) %> </td>
-        </tr>
-      <% end %>
-    </table>
+    <% end %>
+  </table>
 
-    <%= link_to "Back to home", root_path %>
+  <%= link_to "Back to home", root_path %>
 
   </div>
 </div>
+
