--- a/app/views/people/table.html.erb
+++ b/app/views/people/table.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row">
+<div class="row">
+  <div class="col-md-12">
     <p class="text-center">Potential level of friendship</p>
   </div>
 
