events index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-5">
+              View:
               <%= link_to "RailsAdmin", "/admin" %> |
-              <%= link_to "Plans", plans_path %> 
+              <%= link_to "Plans", plans_path %> |
+              <%= link_to "Events", events_path %>               
             </div>
           </div>
 
