multiple survey viewer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
               View:
               <%= link_to "RailsAdmin", "/admin" %> |
               <%= link_to "Plans", plans_path %> |
-              <%= link_to "Events", events_path %>               
+              <%= link_to "Events", events_path %> |
+              <%= link_to "Surveys", surveys_path %>             
             </div>
           </div>
 
